# TgwsProxyAndroid

./: Cargo.toml  LICENSE-GPLv3  build_so.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tgwsproxy/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tgwsproxy/android/: MainActivity.kt  NativeProxy.kt  ProxyConfig.kt  ProxyService.kt  ProxyServiceStatus.kt  UpdateChecker.kt
app/src/main/java/com/tgwsproxy/android/proxy/: ByteUtils.kt  DomainBalancer.kt  FakeTls.kt  MtprotoCrypto.kt  MtprotoPacketSplitter.kt  ProxyLogger.kt  ProxyRuntimeConfig.kt  ProxyStats.kt  RawWebSocket.kt  TgProxyServer.kt
app/src/main/java/com/tgwsproxy/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/tgwsproxy/android/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: cfproxy.rs  config.rs  crypto.rs  lib.rs  proxy.rs  ws.rs
