[package]
name = "tgwsproxy"
version = "1.0.0"
edition = "2021"

[lib]
name = "tgwsproxy"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
tokio-util = "0.7"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
once_cell = "1"
parking_lot = "0.12"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
byteorder = "1"
socket2 = "0.5"

# HTTP-клиент для DoH/GitHub без TLS-дублирования: используем reqwest на rustls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true